--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
       dockerfile: Dockerfile
     container_name: storeall_app
     volumes:
-      - ./src:/var/www/html
-      - ./public:/var/www/html/public
+      - .:/var/www/html
     working_dir: /var/www/html
     depends_on:
       - mysql
@@ -24,8 +23,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./src:/var/www/html
-      - ./public:/var/www/html/public
+      - .:/var/www/html
     depends_on:
       - app
     networks:
