--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-        root /var/www/html/public;
+        root /var/www/html;
         index index.php index.html;
 
         # Security headers
