--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,75 @@
+version: '3.8'
+
 services:
-  # PHP Application
   app:
     build:
-      context: ./docker/php
-      dockerfile: Dockerfile
-    container_name: storeall_app
+      context: .
+      dockerfile: docker/php/Dockerfile
     volumes:
       - .:/var/www/html
-    working_dir: /var/www/html
-    depends_on:
-      - mysql
-      - redis
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
     networks:
-      - storeall_network
+      - storeall-network
 
-  # Nginx Web Server
   nginx:
-    build:
-      context: ./docker/nginx
-      dockerfile: Dockerfile
-    container_name: storeall_nginx
+    image: nginx:alpine
     ports:
       - "8080:80"
     volumes:
       - .:/var/www/html
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - app
     networks:
-      - storeall_network
+      - storeall-network
 
-  # MySQL Database
   mysql:
     image: mysql:8.0
-    container_name: storeall_mysql
-    restart: unless-stopped
     environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: storeall_dev
-      MYSQL_ROOT_PASSWORD: root_password
       MYSQL_USER: storeall_user
-      MYSQL_PASSWORD: storeall_password
+      MYSQL_PASSWORD: storeall_pass
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - storeall_network
+      - storeall-network
 
-  # Redis Cache
   redis:
-    image: redis:7-alpine
-    container_name: storeall_redis
-    restart: unless-stopped
+    image: redis:alpine
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
     networks:
-      - storeall_network
+      - storeall-network
 
-  # phpMyAdmin (Optional - for database management)
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: storeall_phpmyadmin
-    restart: unless-stopped
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
-      PMA_USER: storeall_user
-      PMA_PASSWORD: storeall_password
+      PMA_USER: root
+      PMA_PASSWORD: rootpassword
     ports:
       - "8081:80"
     depends_on:
       - mysql
     networks:
-      - storeall_network
+      - storeall-network
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "1025:1025"  # SMTP port
+      - "8025:8025"  # Web UI port
+    networks:
+      - storeall-network
 
 volumes:
   mysql_data:
-  redis_data:
 
 networks:
-  storeall_network:
+  storeall-network:
     driver: bridge
