--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -55,6 +55,15 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        # Handle verification URLs like /verify-email/abc123...
+        location ~ ^/verify-email/([a-zA-Z0-9]+)$ {
+            fastcgi_pass php-fpm;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root/verify-email/index.php;
+            fastcgi_param QUERY_STRING token=$1;
+        }
+
         # Main location block
         location / {
             try_files $uri $uri/ /index.php?$query_string;
