--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
 RewriteEngine On
 
+# Handle directory requests (like /login/) to their index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^([^/]+)/?$ $1/index.php [NC,L]
+
 # Handle clean URLs - remove .php extension
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
