--- a/docker-compose-fast.yml
+++ b/docker-compose-fast.yml
@@ -6,7 +6,8 @@ services:
       context: .
       dockerfile: docker/php/Dockerfile
     volumes:
-      - storeall_code:/var/www/html
+      # Use absolute path for better performance
+      - ${PWD}:/var/www/html:cached
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
     networks:
       - storeall-network
@@ -16,7 +17,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - storeall_code:/var/www/html
+      - ${PWD}:/var/www/html:cached
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - app
@@ -69,8 +70,8 @@ services:
 
 volumes:
   mysql_data:
-  storeall_code:
 
 networks:
   storeall-network:
     driver: bridge
+
